--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
                          "rustup target add wasm32-unknown-unknown --toolchain stable",
                          "cargo install canvas-node --git https://github.com/paritytech/canvas-node.git --tag v0.1.4 --force --locked",
                          "cargo install cargo-contract --vers 0.8.0 --force --locked"],
-    "postStartCommand": "canvas --dev --tmp",
+    "postStartCommand": "canvas --dev --tmp --ws-external",
     "menuActions": [
       {"id": "polkadotjs",
        "label": "Open PolkadotJS Apps",
